--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,9 @@
-openai
-tiktoken
+Flask==2.1.1
+sqlmodel==0.0.8
+
+gunicorn==20.1.0
+python-dotenv==1.0.0
+guidance==0.0.50
+
+# dev stuff
+ipykernel
